--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "sail": "vite --host",
+        "prod": "vite build"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.9.1",
@@ -15,11 +11,13 @@
         "@inertiajs/progress": "^0.2.5",
         "@tailwindcss/forms": "^0.3.3",
         "@tailwindcss/typography": "^0.4.1",
+        "@vitejs/plugin-vue": "^1.2.3",
         "@vue/compiler-sfc": "^3.0.5",
         "axios": "^0.21",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.5",
         "tailwindcss": "^2.0.1",
+        "vite": "^2.3.8",
         "vue": "^3.0.5"
     }
 }
