--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
+        extra_hosts:
+          - "host.docker.internal:host-gateway"
         volumes:
             - '.:/var/www/html'
         depends_on:
